WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260514
Fix unified build issues after
267037@main
part 2
https://bugs.webkit.org/show_bug.cgi?id=260514
Summary
Fix unified build issues after 267037@main part 2
Kimmo Kinnunen
Reported
2023-08-22 03:40:07 PDT
Fix unified build issues after
267037@main
part 2
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-22 03:40:31 PDT
<
rdar://problem/114249961
>
Kimmo Kinnunen
Comment 2
2023-08-22 03:44:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16925
EWS
Comment 3
2023-08-22 03:48:11 PDT
Committed
267129@main
(1f0f531cc86f): <
https://commits.webkit.org/267129@main
> Reviewed commits have been landed. Closing PR #16925 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug