Fix unified build issues after 267037@main part 2 https://bugs.webkit.org/show_bug.cgi?id=260514 rdar://problem/114249961

Unreviewed, unified build fix.

* Source/WebCore/html/canvas/WebGLObject.cpp:
(WebCore::WebGLObject::context const):
* Source/WebCore/html/canvas/WebGLObject.h:
(WebCore::WebGLObject::context const): Deleted.
* Source/WebCore/html/canvas/WebGLRenderbuffer.h:

Canonical link: https://commits.webkit.org/267129@main